fix double transition in first time on ie9

--- a/styles/touch.slider.css
+++ b/styles/touch.slider.css
@@ -2,7 +2,6 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, del, dfn, em, 
  margin:0; padding:0; border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent; } 
 body { -webkit-text-size-adjust:none; font-family:sans-serif; } 
 h1 { font-size:36px; margin:15px; color:#666; } 
-a { margin:0 0 0 10px; font-size:12px; color:#3c3c3c; } 
 ul, ol{list-style:none}
 .clearfix:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; } 
 .clearfix { display: inline-block; }
@@ -14,5 +13,7 @@ ul, ol{list-style:none}
 #wrapper{width:400px;margin:0 auto}
 .touchSlider { padding-bottom:20px; width:400px} 
 .ie9  .ts-content{-ms-transform:translateX(0px) !important}
-.touchSlider li div{ margin:0 10px; padding:50px 10px; background:#1db1ff; font-weight:bold; color:#fff; font-size:20px; text-align:center; } 
 .ts-current{font-size:20px;background:red;color:white}
+.touchSlider li{position:relative}
+.touchSlider li div{position:absolute;bottom:0;left:0; width:400px; background:rgba(170, 230, 92, 0.8); font-weight:bold; color:#fff; font-size:16px;} 
+
